<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleVoiceChanger</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="key">voice pitch</string>
    <string name="voice_lowest">lowest voice</string>
    <string name="voice_lower">low voice</string>
    <string name="voice_default">普通</string>
    <string name="voice_higher">high voice</string>
    <string name="voice_very_higher">very high voice</string>
    <string name="voice_highest">unbelievable high voice</string>
    <string name="start">start</string>
    <string name="stop">stop</string>

</resources>
