<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
            android:id="@+id/voice_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/voice_lowest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voice_lowest" />

        <RadioButton
                android:id="@+id/voice_lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voice_lower" />

        <!--
        <RadioButton
                android:id="@+id/voice_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/voice_default" />
                -->

        <RadioButton
                android:id="@+id/voice_higher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/voice_higher" />

        <RadioButton
                android:id="@+id/voice_very_higher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voice_very_higher" />

        <RadioButton
                android:id="@+id/voice_highest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voice_highest" />

    </RadioGroup>

    <Button
            android:id="@+id/toggle_button"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start" />

    <com.radionama.samplevoicechanger.visualizer.VisualizerView
            android:id="@+id/visualizer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/black" />

</LinearLayout>